feat: add note page

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -11365,6 +11365,95 @@ video {
   z-index: auto;
 }
 
+.markdown {
+  font-size: 1.125rem;
+  color: #1a202c;
+  line-height: 1.5
+}
+
+.markdown > * + *,
+  .markdown li + li,
+  .markdown li > p + p {
+    margin-top: 1.5rem;
+  }
+
+.markdown strong {
+    color: #000;
+    font-weight: 700;
+  }
+
+.markdown a {
+    color: #000;
+    font-weight: 600;
+  }
+
+.markdown strong a {
+    font-weight: 700;
+  }
+
+.markdown h1 {
+    line-height: 1.25;
+    font-size: 2.25rem;
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 0.5rem;
+    margin-top: 2.5rem;
+  }
+
+.markdown h2 {
+    line-height: 1.25;
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 0.5rem;
+    margin-top: 2.5rem;
+  }
+
+.markdown h3 {
+    line-height: 1.25;
+    font-size: 1.125rem;
+    font-weight: 700;
+    color: #000;
+    margin-top: 2rem;
+    margin-bottom: -0.5rem;
+  }
+
+.markdown code {
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size: 0.875rem;
+    display: inline;
+    color: #f7fafc;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
+.markdown pre code {
+    display: block;
+    background-color: #000;
+    padding: 1rem;
+    border-radius: 0.25rem;
+  }
+
+.markdown blockquote {
+    border-left-width: 4px;
+    border-color: #cbd5e0;
+    padding-left: 1rem;
+    font-style: italic;
+  }
+
+.markdown ul,
+  .markdown ol {
+    padding-left: 1.25rem
+  }
+
+@media (min-width: 640px) {
+
+.markdown ul,
+  .markdown ol {
+      padding-left: 2.5rem
+  }
+    }
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
